--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,10 @@ jobs:
       run: |
         uvicorn main:app
 
-    - name: Deploy to Production
-      # Add deployment steps here, like deploying to Heroku, AWS, etc.
-      # Use appropriate commands to start FastAPI app.
+    - name: Deploy to Heroku
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: |
+        heroku login --email rd.galih752@gmail.com --password Rakasiwi947! # or use token
+        heroku git:remote -a dira-abinawa
+        git push heroku main
