--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Run tests
       run: |
-        uvicorn main:app
+        uvicorn main:app --port 3000
 
     - name: Deploy to Heroku
       env:
